# cmake-configurator-tui

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: info_box.hpp  placholders.hpp  project_name_box.hpp  project_type_box.hpp
include/cmake/: builders.hpp  project.hpp
include/tui/: control_box.hpp  info_box.hpp
src/: main.cpp
src/cmake/: builders.hpp
tests/: CMakeLists.txt
